# pulsr.core

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
include/: Event.Tmpl.hpp  Event.hpp
include/Drawing/: Window.hpp  WindowFactory.hpp
include/Events/: WindowClosedEvent.hpp  WindowClosedEventArgs.hpp  WindowOpenedEvent.hpp  WindowOpenedEventArgs.hpp
include/Kernel/: WindowManager.hpp
include/Window/: Factory.hpp  Manager.hpp  Window.Fwd.hpp  Window.hpp
src/: CMakeLists.txt
src/Events/: WindowClosedEventArgs.cpp  WindowOpenedEventArgs.cpp
src/Window/: Manager.cpp  Window.cpp
tests/: CMakeLists.txt
tests/EventTests/: CMakeLists.txt  Program.cpp
tests/PackageTest/: CMakeLists.txt  Program.cpp  conanfile.py
tests/PackageTests/: Program.cpp
